versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Unresolved.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalUnresolved
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function UnresolvedDefaultConst() &
      bind(C, name='UnresolvedDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function UnresolvedDefaultConst

!! Create, default
function UnresolvedDefault() &
      bind(C, name='UnresolvedDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function UnresolvedDefault

!! Create, general, const
function UnresolvedCreateConst( &
   domainMin, &
   domainMax, &
   domainUnit, &
   tabulatedWidths, &
   domainUnitSize &
) &
      bind(C, name='UnresolvedCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   real(c_double), value, intent(in) :: domainMin
   real(c_double), value, intent(in) :: domainMax
   integer(c_size_t), intent(in), value :: domainUnitSize
   character(c_char), intent(in) :: domainUnit(domainUnitSize)
   type(c_ptr), value :: tabulatedWidths
   type(c_ptr) :: handle
end function UnresolvedCreateConst

!! Create, general
function UnresolvedCreate( &
   domainMin, &
   domainMax, &
   domainUnit, &
   tabulatedWidths, &
   domainUnitSize &
) &
      bind(C, name='UnresolvedCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   real(c_double), value, intent(in) :: domainMin
   real(c_double), value, intent(in) :: domainMax
   integer(c_size_t), intent(in), value :: domainUnitSize
   character(c_char), intent(in) :: domainUnit(domainUnitSize)
   type(c_ptr), value :: tabulatedWidths
   type(c_ptr) :: handle
end function UnresolvedCreate

!! Assign
subroutine UnresolvedAssign(handleLHS, handleRHS) &
      bind(C, name='UnresolvedAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine UnresolvedAssign

!! Delete
subroutine UnresolvedDelete(handle) &
      bind(C, name='UnresolvedDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine UnresolvedDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function UnresolvedRead(handle, filename, filenameSize) &
      bind(C, name='UnresolvedRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function UnresolvedRead

!! Write to file
function UnresolvedWrite(handle, filename, filenameSize) &
      bind(C, name='UnresolvedWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function UnresolvedWrite

!! Print to standard output, in our prettyprinting format
function UnresolvedPrint(handle) &
      bind(C, name='UnresolvedPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function UnresolvedPrint

!! Print to standard output, as XML
function UnresolvedPrintXML(handle) &
      bind(C, name='UnresolvedPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function UnresolvedPrintXML

!! Print to standard output, as JSON
function UnresolvedPrintJSON(handle) &
      bind(C, name='UnresolvedPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function UnresolvedPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: domainMin
!! -----------------------------------------------------------------------------

!! Has
function UnresolvedDomainMinHas(handle) &
      bind(C, name='UnresolvedDomainMinHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function UnresolvedDomainMinHas

!! Get
function UnresolvedDomainMinGet(handle) &
      bind(C, name='UnresolvedDomainMinGet') &
      result(domainMin)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double) :: domainMin
end function UnresolvedDomainMinGet

!! Set
subroutine UnresolvedDomainMinSet(handle, domainMin, domainMinSize) &
      bind(C, name='UnresolvedDomainMinSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: domainMinSize
   character(c_char), intent(in) :: domainMin(domainMinSize)
end subroutine UnresolvedDomainMinSet


!! -----------------------------------------------------------------------------
!! Metadatum: domainMax
!! -----------------------------------------------------------------------------

!! Has
function UnresolvedDomainMaxHas(handle) &
      bind(C, name='UnresolvedDomainMaxHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function UnresolvedDomainMaxHas

!! Get
function UnresolvedDomainMaxGet(handle) &
      bind(C, name='UnresolvedDomainMaxGet') &
      result(domainMax)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double) :: domainMax
end function UnresolvedDomainMaxGet

!! Set
subroutine UnresolvedDomainMaxSet(handle, domainMax, domainMaxSize) &
      bind(C, name='UnresolvedDomainMaxSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: domainMaxSize
   character(c_char), intent(in) :: domainMax(domainMaxSize)
end subroutine UnresolvedDomainMaxSet


!! -----------------------------------------------------------------------------
!! Metadatum: domainUnit
!! -----------------------------------------------------------------------------

!! Has
function UnresolvedDomainUnitHas(handle) &
      bind(C, name='UnresolvedDomainUnitHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function UnresolvedDomainUnitHas

!! Get
function UnresolvedDomainUnitGet(handle) &
      bind(C, name='UnresolvedDomainUnitGet') &
      result(domainUnit)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: domainUnit
end function UnresolvedDomainUnitGet

!! Set
subroutine UnresolvedDomainUnitSet(handle, domainUnit, domainUnitSize) &
      bind(C, name='UnresolvedDomainUnitSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: domainUnitSize
   character(c_char), intent(in) :: domainUnit(domainUnitSize)
end subroutine UnresolvedDomainUnitSet


!! -----------------------------------------------------------------------------
!! Child: tabulatedWidths
!! -----------------------------------------------------------------------------

!! Has
function UnresolvedTabulatedWidthsHas(handle) &
      bind(C, name='UnresolvedTabulatedWidthsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function UnresolvedTabulatedWidthsHas

!! Get, const
function UnresolvedTabulatedWidthsGetConst(handle) &
      bind(C, name='UnresolvedTabulatedWidthsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function UnresolvedTabulatedWidthsGetConst

!! Get
function UnresolvedTabulatedWidthsGet(handle) &
      bind(C, name='UnresolvedTabulatedWidthsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function UnresolvedTabulatedWidthsGet

!! Set
subroutine UnresolvedTabulatedWidthsSet(handle, fieldHandle) &
      bind(C, name='UnresolvedTabulatedWidthsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine UnresolvedTabulatedWidthsSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalUnresolved
